credit where credit is due

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@ h1, h2, h3 {
     font-family: 'Cabin Sketch', cursive;
 }
 body {
+    /* image credit: https://signspecialist.com/decals/beevault/pa */
     background-image: url("../images/Computers%20024-0222.gif");
     color: #660066;
 }
